--- a/Site/sign_up.html
+++ b/Site/sign_up.html
@@ -35,7 +35,7 @@
                     placeholder="Password" type="text">
                     <input aria-describedby="basic-addon1" class="form-control"
                     placeholder="Confirm Password" type="text"><br>
-                </div><button class="btn btn-lg btn-primary btn-block" name=
+                </div> <br><button class="btn btn-lg btn-primary btn-block" name=
                 "Submit" type="submit" value="Login">Sign Me Up!</button>
             </form>
         </div>
