Finished all of skeleton except about us page
Simple UI layout for just about all the pages. Committed just before the
customer meeting.

--- a/Site/about_us.html
+++ b/Site/about_us.html
@@ -42,7 +42,7 @@
                     <li>
                         <a href="suggestions.html">Suggestions</a>
                     </li>
-                    <li class="active"> 
+                    <li class="active">
                         <a href="about_us.html">About Us</a>
                     </li>
                 </ul>
@@ -56,14 +56,13 @@
                 <div class="nav navbar-nav navbar-right" style=
                 "margin-left: 2em; padding-top: 9px">
                     <a href="login.html"><button class="btn btn-success" type=
-                    "submit">Login Here</button></a>
-					<a href="sign_up.html"><button class="btn btn-danger" type=
+                    "submit">Login Here</button></a> <a href=
+                    "sign_up.html"><button class="btn btn-danger" type=
                     "submit">Sign Up Here</button></a>
                 </div>
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
-    </nav>
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    </nav><!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src=
     "https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js">
     </script> 
