--- a/Site/index.html
+++ b/Site/index.html
@@ -56,8 +56,8 @@
                 <div class="nav navbar-nav navbar-right" style=
                 "margin-left: 2em; padding-top: 9px">
                     <a href="login.html"><button class="btn btn-success" type=
-                    "submit">Login Here</button></a>
-					<a href="sign_up.html"><button class="btn btn-danger" type=
+                    "submit">Login Here</button></a> <a href=
+                    "sign_up.html"><button class="btn btn-danger" type=
                     "submit">Sign Up Here</button></a>
                 </div>
             </div><!-- /.navbar-collapse -->
@@ -68,8 +68,8 @@
             <h1>Welcome to Flicks and Chill!</h1>
             <p>This website is a catalog of the best movies out there.<br>
             Press the button below to get started at the movies page!</p>
-            <p><a class="btn btn-primary btn-lg" href="#" role="button">Click
-            Here</a></p>
+            <p><a class="btn btn-primary btn-lg" href="movies.html" role=
+            "button">Click Here</a></p>
         </div>
     </div><!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src=
