--- a/Site/sign_up.html
+++ b/Site/sign_up.html
@@ -35,11 +35,13 @@
                     placeholder="Password" type="text">
                     <input aria-describedby="basic-addon1" class="form-control"
                     placeholder="Confirm Password" type="text"><br>
-                </div><button class="btn btn-lg btn-primary btn-block" name=
+                </div><br><button class="btn btn-lg btn-primary btn-block" name=
                 "Submit" type="submit" value="Login">Sign Me Up!</button>
-            </form>
+            <p style="text-align: center;">Have an account? <a href="login.html">Login Here</a></p>
+			</form>
         </div>
-    </div><br>
+    </div>
+	<br>
     <a href="index.html">
     <p style="text-align: center">Back to Home Page</p></a>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
