--- a/Site/login.html
+++ b/Site/login.html
@@ -32,11 +32,15 @@
                 "" type="password"> <button class=
                 "btn btn-lg btn-primary btn-block" name="Submit" type="submit"
                 value="Login">Login</button>
+                <p style="text-align: center;">Don't have an account? <a href=
+                "sign_up.html">Sign Up Here</a></p>
             </form>
         </div>
-    </div>
-	<br>
-	<a href="index.html"><p style="text-align: center">Back to Home Page</p></a><!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    </div><br>
+    <a href="index.html">
+    <p style="text-align: center">Back to Home Page</p></a>
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+     
     <script src=
     "https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js">
     </script> 
