--- a/Site/suggestions.html
+++ b/Site/suggestions.html
@@ -56,14 +56,86 @@
                 <div class="nav navbar-nav navbar-right" style=
                 "margin-left: 2em; padding-top: 9px">
                     <a href="login.html"><button class="btn btn-success" type=
-                    "submit">Login Here</button></a>
-					<a href="sign_up.html"><button class="btn btn-danger" type=
+                    "submit">Login Here</button></a> <a href=
+                    "sign_up.html"><button class="btn btn-danger" type=
                     "submit">Sign Up Here</button></a>
                 </div>
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
     </nav>
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="well well-sm">
+                    <form class="form-horizontal" method="post">
+                        <fieldset>
+                            <legend class="text-center header">Suggest a
+                            Movie</legend>
+                            <div class="form-group">
+                                <span class=
+                                "col-md-1 col-md-offset-2 text-center fa fa-user bigicon"
+                                style="font-style: italic"></span>
+                                <div class="col-md-8">
+                                    <input class="form-control" id="fname"
+                                    name="name" placeholder="Your Name" type=
+                                    "text">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <span class=
+                                "col-md-1 col-md-offset-2 text-center fa fa-user bigicon"
+                                style="font-style: italic"></span>
+                                <div class="col-md-8">
+                                    <input class="form-control" id="lname"
+                                    name="name" placeholder="Email Address"
+                                    type="text">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <span class=
+                                "col-md-1 col-md-offset-2 text-center fa fa-envelope-o bigicon"
+                                style="font-style: italic"></span>
+                                <div class="col-md-8">
+                                    <input class="form-control" id="email"
+                                    name="email" placeholder="Movie Name" type=
+                                    "text">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <span class=
+                                "col-md-1 col-md-offset-2 text-center fa fa-pencil-square-o bigicon"
+                                style="font-style: italic"></span>
+                                <div class="col-md-8">
+                                    <textarea class="form-control" id="message"
+                                    name="message" placeholder=
+                                    "Why should we add this movie?" rows="7">
+</textarea>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="col-md-12 text-center">
+                                    <button class="btn btn-primary btn-lg"
+                                    type="submit">Submit</button>
+                                </div>
+                            </div>
+                        </fieldset>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    <style>
+    .header {
+        color: #36A0FF;
+        font-size: 27px;
+        padding: 10px;
+    }
+
+    .bigicon {
+        font-size: 35px;
+        color: #36A0FF;
+    }
+    </style><!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src=
     "https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js">
     </script> 
