--- a/Site/about_us.html
+++ b/Site/about_us.html
@@ -1,74 +1,130 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta content="IE=edge" http-equiv="X-UA-Compatible">
-    <meta content="width=device-width, initial-scale=1" name="viewport">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Bootstrap 101 Template</title><!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
+    <head>
+        <meta charset="utf-8">
+        <meta content="IE=edge" http-equiv="X-UA-Compatible">
+        <meta content="width=device-width, initial-scale=1" name="viewport"><!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+        <title>
+            Flicks and Chill-About Us
+        </title><!-- Bootstrap -->
+        <link href="css/bootstrap.min.css" rel="stylesheet"><!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+        <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-</head>
-<body>
-    <nav class="navbar navbar-default">
-        <div class="container-fluid">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button aria-expanded="false" class="navbar-toggle collapsed"
-                data-target="#bs-example-navbar-collapse-1" data-toggle=
-                "collapse" type="button"><span class="sr-only">Toggle
-                navigation</span> <span class="icon-bar"></span> <span class=
-                "icon-bar"></span> <span class="icon-bar"></span></button>
-                <a class="navbar-brand" href="#"><img alt="Brand" src=
-                "http://i.imgur.com/bmVEUnC.png" style=
-                "width: 200px; margin-top: -35px;"></a>
-            </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id=
-            "bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li>
-                        <a href="index.html">Home <span class=
-                        "sr-only">(current)</span></a>
-                    </li>
-                    <li>
-                        <a href="movies.html">Movies</a>
-                    </li>
-                    <li>
-                        <a href="suggestions.html">Suggestions</a>
-                    </li>
-                    <li class="active">
-                        <a href="about_us.html">About Us</a>
-                    </li>
-                </ul>
-                <form class="navbar-form navbar-left" role="search">
-                    <div class="form-group">
-                        <input class="form-control" placeholder="Search" type=
-                        "text">
-                    </div><button class="btn btn-default" type=
-                    "submit">Submit</button>
-                </form>
-                <div class="nav navbar-nav navbar-right" style=
-                "margin-left: 2em; padding-top: 9px">
-                    <a href="login.html"><button class="btn btn-success" type=
-                    "submit">Login Here</button></a> <a href=
-                    "sign_up.html"><button class="btn btn-danger" type=
-                    "submit">Sign Up Here</button></a>
+    </head>
+    <body>
+        <nav class="navbar navbar-default">
+            <div class="container-fluid">
+                <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header">
+                    <button aria-expanded="false" class="navbar-toggle collapsed" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type="button"><span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span></button> <a class="navbar-brand" href="#"><img alt="Brand" src="http://i.imgur.com/bmVEUnC.png" style="width: 200px; margin-top: -35px;"></a>
+                </div><!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav">
+                        <li>
+                            <a href="index.html">Home <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li>
+                            <a href="movies.html">Movies</a>
+                        </li>
+                        <li>
+                            <a href="suggestions.html">Suggestions</a>
+                        </li>
+                        <li class="active">
+                            <a href="about_us.html">About Us</a>
+                        </li>
+                    </ul>
+                    <form class="navbar-form navbar-left" role="search">
+                        <div class="form-group">
+                            <input class="form-control" placeholder="Search" type="text">
+                        </div><button class="btn btn-default" type="submit">Submit</button>
+                    </form>
+                    <div class="nav navbar-nav navbar-right" style="margin-left: 2em; padding-top: 9px">
+                        <a href="login.html"><button class="btn btn-success" type="submit">Login Here</button></a> <a href="sign_up.html"><button class="btn btn-danger" type="submit">Sign Up Here</button></a>
+                    </div>
+                </div><!-- /.navbar-collapse -->
+            </div><!-- /.container-fluid -->
+        </nav><!-- Page Content -->
+        <div class="container">
+            <!-- Introduction Row -->
+            <div class="row">
+                <div class="col-lg-12">
+                    <h1 class="page-header">
+                        About Us <small>It's Nice to Meet You!</small>
+                    </h1>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, explicabo dolores ipsam aliquam inventore corrupti eveniet quisquam quod totam laudantium repudiandae obcaecati ea consectetur debitis velit facere nisi expedita vel?
+                    </p>
                 </div>
-            </div><!-- /.navbar-collapse -->
-        </div><!-- /.container-fluid -->
-    </nav><!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src=
-    "https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js">
-    </script> 
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-     
-    <script src="js/bootstrap.min.js">
-    </script>
-</body>
+            </div><!-- Team Members Row -->
+            <div class="row">
+                <div class="col-lg-12">
+                    <h2 class="page-header">
+                        Our Team
+                    </h2>
+                </div>
+                <div class="col-lg-4 col-sm-6 text-center">
+                    <img alt="" class="img-circle img-responsive img-center" src="http://placehold.it/200x200" style="margin-left: 75px">
+                    <h3>
+                        John Smith <small>Job Title</small>
+                    </h3>
+                    <p>
+                        What does this team member to? Keep it short! This is also a great spot for social links!
+                    </p>
+                </div>
+                <div class="col-lg-4 col-sm-6 text-center">
+                    <img alt="" class="img-circle img-responsive img-center" src="http://placehold.it/200x200" style="margin-left: 75px">
+                    <h3>
+                        John Smith <small>Job Title</small>
+                    </h3>
+                    <p>
+                        What does this team member to? Keep it short! This is also a great spot for social links!
+                    </p>
+                </div>
+                <div class="col-lg-4 col-sm-6 text-center">
+                    <img alt="" class="img-circle img-responsive img-center" src="http://placehold.it/200x200" style="margin-left: 75px">
+                    <h3>
+                        John Smith <small>Job Title</small>
+                    </h3>
+                    <p>
+                        What does this team member to? Keep it short! This is also a great spot for social links!
+                    </p>
+                </div>
+                <div class="col-lg-4 col-sm-6 text-center">
+                    <img alt="" class="img-circle img-responsive img-center" src="http://placehold.it/200x200" style="margin-left: 75px">
+                    <h3>
+                        John Smith <small>Job Title</small>
+                    </h3>
+                    <p>
+                        What does this team member to? Keep it short! This is also a great spot for social links!
+                    </p>
+                </div>
+                <div class="col-lg-4 col-sm-6 text-center">
+                    <img alt="" class="img-circle img-responsive img-center" src="http://placehold.it/200x200" style="margin-left: 75px">
+                    <h3>
+                        John Smith <small>Job Title</small>
+                    </h3>
+                    <p>
+                        What does this team member to? Keep it short! This is also a great spot for social links!
+                    </p>
+                </div>
+                <div class="col-lg-4 col-sm-6 text-center">
+                    <img alt="" class="img-circle img-responsive img-center" src="http://placehold.it/200x200" style="margin-left: 75px">
+                    <h3>
+                        John Smith <small>Job Title</small>
+                    </h3>
+                    <p>
+                        What does this team member to? Keep it short! This is also a great spot for social links!
+                    </p>
+                </div>
+            </div><!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js">
+            </script> <!-- Include all compiled plugins (below), or include individual files as needed -->
+             
+            <script src="js/bootstrap.min.js">
+            </script>
+        </div>
+    </body>
 </html>
