--- a/Site/suggestions.html
+++ b/Site/suggestions.html
@@ -1,147 +1,129 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta content="IE=edge" http-equiv="X-UA-Compatible">
-    <meta content="width=device-width, initial-scale=1" name="viewport">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Bootstrap 101 Template</title><!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
+    <head>
+        <meta charset="utf-8">
+        <meta content="IE=edge" http-equiv="X-UA-Compatible">
+        <meta content="width=device-width, initial-scale=1" name="viewport"><!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+        <title>
+            Flicks and Chill-Suggestions
+        </title><!-- Bootstrap -->
+        <link href="css/bootstrap.min.css" rel="stylesheet"><!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+        <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-</head>
-<body>
-    <nav class="navbar navbar-default">
-        <div class="container-fluid">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button aria-expanded="false" class="navbar-toggle collapsed"
-                data-target="#bs-example-navbar-collapse-1" data-toggle=
-                "collapse" type="button"><span class="sr-only">Toggle
-                navigation</span> <span class="icon-bar"></span> <span class=
-                "icon-bar"></span> <span class="icon-bar"></span></button>
-                <a class="navbar-brand" href="#"><img alt="Brand" src=
-                "http://i.imgur.com/bmVEUnC.png" style=
-                "width: 200px; margin-top: -35px;"></a>
-            </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id=
-            "bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li>
-                        <a href="index.html">Home <span class=
-                        "sr-only">(current)</span></a>
-                    </li>
-                    <li>
-                        <a href="movies.html">Movies</a>
-                    </li>
-                    <li class="active">
-                        <a href="suggestions.html">Suggestions</a>
-                    </li>
-                    <li>
-                        <a href="about_us.html">About Us</a>
-                    </li>
-                </ul>
-                <form class="navbar-form navbar-left" role="search">
-                    <div class="form-group">
-                        <input class="form-control" placeholder="Search" type=
-                        "text">
-                    </div><button class="btn btn-default" type=
-                    "submit">Submit</button>
-                </form>
-                <div class="nav navbar-nav navbar-right" style=
-                "margin-left: 2em; padding-top: 9px">
-                    <a href="login.html"><button class="btn btn-success" type=
-                    "submit">Login Here</button></a> <a href=
-                    "sign_up.html"><button class="btn btn-danger" type=
-                    "submit">Sign Up Here</button></a>
-                </div>
-            </div><!-- /.navbar-collapse -->
-        </div><!-- /.container-fluid -->
-    </nav>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="well well-sm">
-                    <form class="form-horizontal" method="post">
-                        <fieldset>
-                            <legend class="text-center header">Suggest a
-                            Movie</legend>
-                            <div class="form-group">
-                                <span class=
-                                "col-md-1 col-md-offset-2 text-center fa fa-user bigicon"
-                                style="font-style: italic"></span>
-                                <div class="col-md-8">
-                                    <input class="form-control" id="fname"
-                                    name="name" placeholder="Your Name" type=
-                                    "text">
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <span class=
-                                "col-md-1 col-md-offset-2 text-center fa fa-user bigicon"
-                                style="font-style: italic"></span>
-                                <div class="col-md-8">
-                                    <input class="form-control" id="lname"
-                                    name="name" placeholder="Email Address"
-                                    type="text">
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <span class=
-                                "col-md-1 col-md-offset-2 text-center fa fa-envelope-o bigicon"
-                                style="font-style: italic"></span>
-                                <div class="col-md-8">
-                                    <input class="form-control" id="email"
-                                    name="email" placeholder="Movie Name" type=
-                                    "text">
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <span class=
-                                "col-md-1 col-md-offset-2 text-center fa fa-pencil-square-o bigicon"
-                                style="font-style: italic"></span>
-                                <div class="col-md-8">
-                                    <textarea class="form-control" id="message"
-                                    name="message" placeholder=
-                                    "Why should we add this movie?" rows="7">
-</textarea>
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <div class="col-md-12 text-center">
-                                    <button class="btn btn-primary btn-lg"
-                                    type="submit">Submit</button>
-                                </div>
-                            </div>
-                        </fieldset>
+    </head>
+    <body>
+        <nav class="navbar navbar-default">
+            <div class="container-fluid">
+                <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header">
+                    <button aria-expanded="false" class="navbar-toggle collapsed" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type="button"><span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span></button> <a class="navbar-brand" href="#"><img alt="Brand" src="http://i.imgur.com/bmVEUnC.png" style="width: 200px; margin-top: -35px;"></a>
+                </div><!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav">
+                        <li>
+                            <a href="index.html">Home <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li>
+                            <a href="movies.html">Movies</a>
+                        </li>
+                        <li class="active">
+                            <a href="suggestions.html">Suggestions</a>
+                        </li>
+                        <li>
+                            <a href="about_us.html">About Us</a>
+                        </li>
+                    </ul>
+                    <form class="navbar-form navbar-left" role="search">
+                        <div class="form-group">
+                            <input class="form-control" placeholder="Search" type="text">
+                        </div><button class="btn btn-default" type="submit">Submit</button>
                     </form>
+                    <div class="nav navbar-nav navbar-right" style="margin-left: 2em; padding-top: 9px">
+                        <a href="login.html"><button class="btn btn-success" type="submit">Login Here</button></a> <a href="sign_up.html"><button class="btn btn-danger" type="submit">Sign Up Here</button></a>
+                    </div>
+                </div><!-- /.navbar-collapse -->
+            </div><!-- /.container-fluid -->
+        </nav>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="well well-sm">
+                        <form class="form-horizontal" method="post">
+                            <fieldset>
+                                <legend class="text-center header">Suggest a Movie</legend>
+                                <div class="form-group">
+                                    <span class="col-md-1 col-md-offset-2 text-center fa fa-user bigicon" style="font-style: italic"></span>
+                                    <div class="col-md-8">
+                                        <input class="form-control" id="fname" name="name" placeholder="Movie Name" type="text">
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <span class="col-md-1 col-md-offset-2 text-center fa fa-user bigicon" style="font-style: italic"></span>
+                                    <div class="col-md-8">
+                                        <input class="form-control" id="lname" name="name" placeholder="Link to Movie Poster" type="text">
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <span class="col-md-1 col-md-offset-2 text-center fa fa-envelope-o bigicon" style="font-style: italic"></span>
+                                    <div class="col-md-8">
+                                        <input class="form-control" id="email" name="email" placeholder="Price" type="text">
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <span class="col-md-1 col-md-offset-2 text-center fa fa-envelope-o bigicon" style="font-style: italic"></span>
+                                    <div class="col-md-8">
+                                        <input class="form-control" id="email" name="email" placeholder="Director" type="text">
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <span class="col-md-1 col-md-offset-2 text-center fa fa-envelope-o bigicon" style="font-style: italic"></span>
+                                    <div class="col-md-8">
+                                        <input class="form-control" id="email" name="email" placeholder="Genre" type="text">
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <span class="col-md-1 col-md-offset-2 text-center fa fa-envelope-o bigicon" style="font-style: italic"></span>
+                                    <div class="col-md-8">
+                                        <input class="form-control" id="email" name="email" placeholder="Year of Release" type="text">
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <span class="col-md-1 col-md-offset-2 text-center fa fa-pencil-square-o bigicon" style="font-style: italic"></span>
+                                    <div class="col-md-8">
+                                        <textarea class="form-control" id="message" name="message" placeholder="Movie Descrption and Summary" rows="7">
+</textarea>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <div class="col-md-12 text-center">
+                                        <button class="btn btn-primary btn-lg" type="submit">Submit</button>
+                                    </div>
+                                </div>
+                            </fieldset>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-    <style>
-    .header {
-        color: #36A0FF;
-        font-size: 27px;
-        padding: 10px;
-    }
+        <style>
+          .header {
+              color: #36A0FF;
+              font-size: 27px;
+              padding: 10px;
+          }
 
-    .bigicon {
-        font-size: 35px;
-        color: #36A0FF;
-    }
-    </style><!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src=
-    "https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js">
-    </script> 
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-     
-    <script src="js/bootstrap.min.js">
-    </script>
-</body>
+          .bigicon {
+              font-size: 35px;
+              color: #36A0FF;
+          }
+        </style><!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js">
+        </script> <!-- Include all compiled plugins (below), or include individual files as needed -->
+         
+        <script src="js/bootstrap.min.js">
+        </script>
+    </body>
 </html>
