Changed the welcome message on index page

--- a/Site/index.html
+++ b/Site/index.html
@@ -53,8 +53,8 @@
                     Welcome to Flicks and Chill!
                 </h1>
                 <p>
-                    This website is a catalog of the best movies out there.<br>
-                    Press the button below to get started at the movies page!
+                    This catalog has a list of some of the best movies out there.<br>
+                    Press the button below to start exploring our selection!
                 </p>
                 <p>
                     <a class="btn btn-primary btn-lg" href="movies.html" role="button">Click Here</a>
