Final Commit before Iteration 1 Presentation
Added a help page plus navbar(no content in it). Finished overall web
skeleton.

--- a/Site/about_us.html
+++ b/Site/about_us.html
@@ -32,6 +32,9 @@
                         <li>
                             <a href="suggestions.html">Suggestions</a>
                         </li>
+                        <li>
+                            <a href="help.html">Help</a>
+                        </li>
                         <li class="active">
                             <a href="about_us.html">About Us</a>
                         </li>
@@ -55,68 +58,68 @@
                         About Us <small>It's Nice to Meet You!</small>
                     </h1>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, explicabo dolores ipsam aliquam inventore corrupti eveniet quisquam quod totam laudantium repudiandae obcaecati ea consectetur debitis velit facere nisi expedita vel?
+                        Welcome to Flicks and Chill! This web application was developed by a team of students--also known as Netwerks--at Miami University for CSE 201 Intro to Software Engineering. We hope you enjoy our movie catalog. Happy Flicks and Chilling!
                     </p>
                 </div>
             </div><!-- Team Members Row -->
             <div class="row">
                 <div class="col-lg-12">
                     <h2 class="page-header">
-                        Our Team
+                        The Netwerks Team
                     </h2>
                 </div>
                 <div class="col-lg-4 col-sm-6 text-center">
                     <img alt="" class="img-circle img-responsive img-center" src="http://placehold.it/200x200" style="margin-left: 75px">
                     <h3>
-                        John Smith <small>Job Title</small>
+                        Martin Kohlman <small>Project Manager</small>
                     </h3>
                     <p>
-                        What does this team member to? Keep it short! This is also a great spot for social links!
+                        Short description of position
                     </p>
                 </div>
                 <div class="col-lg-4 col-sm-6 text-center">
                     <img alt="" class="img-circle img-responsive img-center" src="http://placehold.it/200x200" style="margin-left: 75px">
                     <h3>
-                        John Smith <small>Job Title</small>
+                        Chase Guggenheim <small>Technical Manager</small>
                     </h3>
                     <p>
-                        What does this team member to? Keep it short! This is also a great spot for social links!
+                       Short description of position
                     </p>
                 </div>
                 <div class="col-lg-4 col-sm-6 text-center">
                     <img alt="" class="img-circle img-responsive img-center" src="http://placehold.it/200x200" style="margin-left: 75px">
                     <h3>
-                        John Smith <small>Job Title</small>
+                        Thomas Burlett <small>Developer</small>
                     </h3>
                     <p>
-                        What does this team member to? Keep it short! This is also a great spot for social links!
+                        Short description of position
                     </p>
                 </div>
                 <div class="col-lg-4 col-sm-6 text-center">
                     <img alt="" class="img-circle img-responsive img-center" src="http://placehold.it/200x200" style="margin-left: 75px">
                     <h3>
-                        John Smith <small>Job Title</small>
+                        Logan Davey <small>Developer</small>
                     </h3>
                     <p>
-                        What does this team member to? Keep it short! This is also a great spot for social links!
+                        Short description of position
                     </p>
                 </div>
                 <div class="col-lg-4 col-sm-6 text-center">
                     <img alt="" class="img-circle img-responsive img-center" src="http://placehold.it/200x200" style="margin-left: 75px">
                     <h3>
-                        John Smith <small>Job Title</small>
+                        Miranda Irvin <small>Tester</small>
                     </h3>
                     <p>
-                        What does this team member to? Keep it short! This is also a great spot for social links!
+                        Short description of position
                     </p>
                 </div>
                 <div class="col-lg-4 col-sm-6 text-center">
                     <img alt="" class="img-circle img-responsive img-center" src="http://placehold.it/200x200" style="margin-left: 75px">
                     <h3>
-                        John Smith <small>Job Title</small>
+                        Alli Cline <small>SQL Developer/Tester</small>
                     </h3>
                     <p>
-                        What does this team member to? Keep it short! This is also a great spot for social links!
+                        Short description of position
                     </p>
                 </div>
             </div><!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
@@ -126,5 +129,8 @@
             <script src="js/bootstrap.min.js">
             </script>
         </div>
+        <br><br>
+            <p style=" bottom: 0; width:100%; text-align: center; font-size: 12px"><i>Website Powered by Netwerks &copy;</i>
+            </p>
     </body>
 </html>
