--- a/Site/help.html
+++ b/Site/help.html
@@ -5,7 +5,7 @@
         <meta content="IE=edge" http-equiv="X-UA-Compatible">
         <meta content="width=device-width, initial-scale=1" name="viewport"><!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
         <title>
-            Flicks and Chill-Home
+            Flicks and Chill-Suggestions
         </title><!-- Bootstrap -->
         <link href="css/bootstrap.min.css" rel="stylesheet"><!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -23,7 +23,7 @@
                 </div><!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
-                        <li class="active">
+                        <li>
                             <a href="index.html">Home <span class="sr-only">(current)</span></a>
                         </li>
                         <li>
@@ -32,7 +32,7 @@
                         <li>
                             <a href="suggestions.html">Suggestions</a>
                         </li>
-                        <li>
+                        <li class="active">
                             <a href="help.html">Help</a>
                         </li>
                         <li>
@@ -50,20 +50,8 @@
                 </div><!-- /.navbar-collapse -->
             </div><!-- /.container-fluid -->
         </nav>
-        <div class="jumbotron">
-            <div class="container" style="text-align: center">
-                <h1>
-                    Welcome to Flicks and Chill!
-                </h1>
-                <p>
-                    This catalog has a list of some of the best movies out there.<br>
-                    Press the button below to start exploring our selection!
-                </p>
-                <p>
-                    <a class="btn btn-primary btn-lg" href="movies.html" role="button">Click Here</a>
-                </p>
-            </div>
-        </div><!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+        <h1 style="text-align: center">Coming Soon!</h1>
+        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js">
         </script> <!-- Include all compiled plugins (below), or include individual files as needed -->
          
