--- a/Site/movies.html
+++ b/Site/movies.html
@@ -33,6 +33,9 @@
                             <a href="suggestions.html">Suggestions</a>
                         </li>
                         <li>
+                            <a href="help.html">Help</a>
+                        </li>
+                        <li>
                             <a href="about_us.html">About Us</a>
                         </li>
                     </ul>
@@ -89,15 +92,16 @@
         </div>
         <div class="well">
             <div class="container-fluid">
-                <img alt="movieImage" src="http://ia.media-imdb.com/images/M/MV5BMTQ2MzYwMzk5Ml5BMl5BanBnXkFtZTcwOTI4NzUyMw@@._V1_SX640_SY720_.jpg" style="float: left; width: 120px; height: 180px;">
+                <img alt="movieImage" src="http://ia.media-imdb.com/images/M/MV5BMTQ2MzYwMzk5Ml5BMl5BanBnXkFtZTcwOTI4NzUyMw@@._V1_SX640_SY720_.jpg" style="float: left; width: 120px; height: 180px; margin-right: 20px;">
                 <h3>
                     <a href="#">Anchorman: The Legend of Ron Burgundy</a>
                 </h3>
-                <h5 style="float: left">
+                <h5>
                     Rating: <span style="font-weight:normal;">10/10</span><br>
                     Genre: <span style="font-weight:normal;">Comedy</span><br>
                     Director: <span style="font-weight:normal;">Adam McKay</span><br>
-                    Year Released: <span style="font-weight:normal;">2004</span>
+                    Year Released: <span style="font-weight:normal;">2004</span><br>
+                    HD Download Price: <span style="font-weight:normal;">$10.00</span>
                 </h5>
                 <p>
                     Ron Burgundy is San Diego's top rated newsman in the male-dominated broadcasting of the '70s, but that's all about to change for Ron and his cronies when an ambitious woman is hired as a new anchor.
@@ -106,15 +110,16 @@
         </div>
         <div class="well">
             <div class="container-fluid">
-                <img alt="movieImage" src="http://ia.media-imdb.com/images/M/MV5BMTQ2MzYwMzk5Ml5BMl5BanBnXkFtZTcwOTI4NzUyMw@@._V1_SX640_SY720_.jpg" style="float: left; width: 120px; height: 180px;">
+                <img alt="movieImage" src="http://ia.media-imdb.com/images/M/MV5BMTQ2MzYwMzk5Ml5BMl5BanBnXkFtZTcwOTI4NzUyMw@@._V1_SX640_SY720_.jpg" style="float: left; width: 120px; height: 180px; margin-right: 20px;">
                 <h3>
                     <a href="#">Anchorman: The Legend of Ron Burgundy</a>
                 </h3>
-                <h5 style="float: left">
+                <h5>
                     Rating: <span style="font-weight:normal;">10/10</span><br>
                     Genre: <span style="font-weight:normal;">Comedy</span><br>
                     Director: <span style="font-weight:normal;">Adam McKay</span><br>
-                    Year Released: <span style="font-weight:normal;">2004</span>
+                    Year Released: <span style="font-weight:normal;">2004</span><br>
+                    HD Download Price: <span style="font-weight:normal;">$10.00</span>
                 </h5>
                 <p>
                     Ron Burgundy is San Diego's top rated newsman in the male-dominated broadcasting of the '70s, but that's all about to change for Ron and his cronies when an ambitious woman is hired as a new anchor.
@@ -123,15 +128,16 @@
         </div>
         <div class="well">
             <div class="container-fluid">
-                <img alt="movieImage" src="http://ia.media-imdb.com/images/M/MV5BMTQ2MzYwMzk5Ml5BMl5BanBnXkFtZTcwOTI4NzUyMw@@._V1_SX640_SY720_.jpg" style="float: left; width: 120px; height: 180px;">
+                <img alt="movieImage" src="http://ia.media-imdb.com/images/M/MV5BMTQ2MzYwMzk5Ml5BMl5BanBnXkFtZTcwOTI4NzUyMw@@._V1_SX640_SY720_.jpg" style="float: left; width: 120px; height: 180px; margin-right: 20px;">
                 <h3>
                     <a href="#">Anchorman: The Legend of Ron Burgundy</a>
                 </h3>
-                <h5 style="float: left">
+                <h5>
                     Rating: <span style="font-weight:normal;">10/10</span><br>
                     Genre: <span style="font-weight:normal;">Comedy</span><br>
                     Director: <span style="font-weight:normal;">Adam McKay</span><br>
-                    Year Released: <span style="font-weight:normal;">2004</span>
+                    Year Released: <span style="font-weight:normal;">2004</span><br>
+                    HD Download Price: <span style="font-weight:normal;">$10.00</span>
                 </h5>
                 <p>
                     Ron Burgundy is San Diego's top rated newsman in the male-dominated broadcasting of the '70s, but that's all about to change for Ron and his cronies when an ambitious woman is hired as a new anchor.
@@ -140,15 +146,16 @@
         </div>
         <div class="well">
             <div class="container-fluid">
-                <img alt="movieImage" src="http://ia.media-imdb.com/images/M/MV5BMTQ2MzYwMzk5Ml5BMl5BanBnXkFtZTcwOTI4NzUyMw@@._V1_SX640_SY720_.jpg" style="float: left; width: 120px; height: 180px;">
+                <img alt="movieImage" src="http://ia.media-imdb.com/images/M/MV5BMTQ2MzYwMzk5Ml5BMl5BanBnXkFtZTcwOTI4NzUyMw@@._V1_SX640_SY720_.jpg" style="float: left; width: 120px; height: 180px; margin-right: 20px;">
                 <h3>
                     <a href="#">Anchorman: The Legend of Ron Burgundy</a>
                 </h3>
-                <h5 style="float: left">
+                <h5>
                     Rating: <span style="font-weight:normal;">10/10</span><br>
                     Genre: <span style="font-weight:normal;">Comedy</span><br>
                     Director: <span style="font-weight:normal;">Adam McKay</span><br>
-                    Year Released: <span style="font-weight:normal;">2004</span>
+                    Year Released: <span style="font-weight:normal;">2004</span><br>
+                    HD Download Price: <span style="font-weight:normal;">$10.00</span>
                 </h5>
                 <p>
                     Ron Burgundy is San Diego's top rated newsman in the male-dominated broadcasting of the '70s, but that's all about to change for Ron and his cronies when an ambitious woman is hired as a new anchor.
@@ -157,15 +164,16 @@
         </div>
         <div class="well">
             <div class="container-fluid">
-                <img alt="movieImage" src="http://ia.media-imdb.com/images/M/MV5BMTQ2MzYwMzk5Ml5BMl5BanBnXkFtZTcwOTI4NzUyMw@@._V1_SX640_SY720_.jpg" style="float: left; width: 120px; height: 180px;">
+                <img alt="movieImage" src="http://ia.media-imdb.com/images/M/MV5BMTQ2MzYwMzk5Ml5BMl5BanBnXkFtZTcwOTI4NzUyMw@@._V1_SX640_SY720_.jpg" style="float: left; width: 120px; height: 180px; margin-right: 20px;">
                 <h3>
                     <a href="#">Anchorman: The Legend of Ron Burgundy</a>
                 </h3>
-                <h5 style="float: left">
+                <h5>
                     Rating: <span style="font-weight:normal;">10/10</span><br>
                     Genre: <span style="font-weight:normal;">Comedy</span><br>
                     Director: <span style="font-weight:normal;">Adam McKay</span><br>
-                    Year Released: <span style="font-weight:normal;">2004</span>
+                    Year Released: <span style="font-weight:normal;">2004</span><br>
+                    HD Download Price: <span style="font-weight:normal;">$10.00</span>
                 </h5>
                 <p>
                     Ron Burgundy is San Diego's top rated newsman in the male-dominated broadcasting of the '70s, but that's all about to change for Ron and his cronies when an ambitious woman is hired as a new anchor.
@@ -174,15 +182,16 @@
         </div>
         <div class="well">
             <div class="container-fluid">
-                <img alt="movieImage" src="http://ia.media-imdb.com/images/M/MV5BMTQ2MzYwMzk5Ml5BMl5BanBnXkFtZTcwOTI4NzUyMw@@._V1_SX640_SY720_.jpg" style="float: left; width: 120px; height: 180px;">
+                <img alt="movieImage" src="http://ia.media-imdb.com/images/M/MV5BMTQ2MzYwMzk5Ml5BMl5BanBnXkFtZTcwOTI4NzUyMw@@._V1_SX640_SY720_.jpg" style="float: left; width: 120px; height: 180px; margin-right: 20px;">
                 <h3>
                     <a href="#">Anchorman: The Legend of Ron Burgundy</a>
                 </h3>
-                <h5 style="float: left">
+                <h5>
                     Rating: <span style="font-weight:normal;">10/10</span><br>
                     Genre: <span style="font-weight:normal;">Comedy</span><br>
                     Director: <span style="font-weight:normal;">Adam McKay</span><br>
-                    Year Released: <span style="font-weight:normal;">2004</span>
+                    Year Released: <span style="font-weight:normal;">2004</span><br>
+                    HD Download Price: <span style="font-weight:normal;">$10.00</span>
                 </h5>
                 <p>
                     Ron Burgundy is San Diego's top rated newsman in the male-dominated broadcasting of the '70s, but that's all about to change for Ron and his cronies when an ambitious woman is hired as a new anchor.
@@ -191,15 +200,16 @@
         </div>
         <div class="well">
             <div class="container-fluid">
-                <img alt="movieImage" src="http://ia.media-imdb.com/images/M/MV5BMTQ2MzYwMzk5Ml5BMl5BanBnXkFtZTcwOTI4NzUyMw@@._V1_SX640_SY720_.jpg" style="float: left; width: 120px; height: 180px;">
+                <img alt="movieImage" src="http://ia.media-imdb.com/images/M/MV5BMTQ2MzYwMzk5Ml5BMl5BanBnXkFtZTcwOTI4NzUyMw@@._V1_SX640_SY720_.jpg" style="float: left; width: 120px; height: 180px; margin-right: 20px;">
                 <h3>
                     <a href="#">Anchorman: The Legend of Ron Burgundy</a>
                 </h3>
-                <h5 style="float: left">
+                <h5>
                     Rating: <span style="font-weight:normal;">10/10</span><br>
                     Genre: <span style="font-weight:normal;">Comedy</span><br>
                     Director: <span style="font-weight:normal;">Adam McKay</span><br>
-                    Year Released: <span style="font-weight:normal;">2004</span>
+                    Year Released: <span style="font-weight:normal;">2004</span><br>
+                    HD Download Price: <span style="font-weight:normal;">$10.00</span>
                 </h5>
                 <p>
                     Ron Burgundy is San Diego's top rated newsman in the male-dominated broadcasting of the '70s, but that's all about to change for Ron and his cronies when an ambitious woman is hired as a new anchor.
@@ -208,15 +218,16 @@
         </div>
         <div class="well">
             <div class="container-fluid">
-                <img alt="movieImage" src="http://ia.media-imdb.com/images/M/MV5BMTQ2MzYwMzk5Ml5BMl5BanBnXkFtZTcwOTI4NzUyMw@@._V1_SX640_SY720_.jpg" style="float: left; width: 120px; height: 180px;">
+                <img alt="movieImage" src="http://ia.media-imdb.com/images/M/MV5BMTQ2MzYwMzk5Ml5BMl5BanBnXkFtZTcwOTI4NzUyMw@@._V1_SX640_SY720_.jpg" style="float: left; width: 120px; height: 180px; margin-right: 20px;">
                 <h3>
                     <a href="#">Anchorman: The Legend of Ron Burgundy</a>
                 </h3>
-                <h5 style="float: left">
+                <h5>
                     Rating: <span style="font-weight:normal;">10/10</span><br>
                     Genre: <span style="font-weight:normal;">Comedy</span><br>
                     Director: <span style="font-weight:normal;">Adam McKay</span><br>
-                    Year Released: <span style="font-weight:normal;">2004</span>
+                    Year Released: <span style="font-weight:normal;">2004</span><br>
+                    HD Download Price: <span style="font-weight:normal;">$10.00</span>
                 </h5>
                 <p>
                     Ron Burgundy is San Diego's top rated newsman in the male-dominated broadcasting of the '70s, but that's all about to change for Ron and his cronies when an ambitious woman is hired as a new anchor.
@@ -225,15 +236,16 @@
         </div>
         <div class="well">
             <div class="container-fluid">
-                <img alt="movieImage" src="http://ia.media-imdb.com/images/M/MV5BMTQ2MzYwMzk5Ml5BMl5BanBnXkFtZTcwOTI4NzUyMw@@._V1_SX640_SY720_.jpg" style="float: left; width: 120px; height: 180px;">
+                <img alt="movieImage" src="http://ia.media-imdb.com/images/M/MV5BMTQ2MzYwMzk5Ml5BMl5BanBnXkFtZTcwOTI4NzUyMw@@._V1_SX640_SY720_.jpg" style="float: left; width: 120px; height: 180px; margin-right: 20px;">
                 <h3>
                     <a href="#">Anchorman: The Legend of Ron Burgundy</a>
                 </h3>
-                <h5 style="float: left">
+                <h5>
                     Rating: <span style="font-weight:normal;">10/10</span><br>
                     Genre: <span style="font-weight:normal;">Comedy</span><br>
                     Director: <span style="font-weight:normal;">Adam McKay</span><br>
-                    Year Released: <span style="font-weight:normal;">2004</span>
+                    Year Released: <span style="font-weight:normal;">2004</span><br>
+                    HD Download Price: <span style="font-weight:normal;">$10.00</span>
                 </h5>
                 <p>
                     Ron Burgundy is San Diego's top rated newsman in the male-dominated broadcasting of the '70s, but that's all about to change for Ron and his cronies when an ambitious woman is hired as a new anchor.
@@ -255,5 +267,8 @@
          
         <script src="js/bootstrap.min.js">
         </script>
+            <br><br>
+            <p style=" bottom: 0; width:100%; text-align: center; font-size: 12px"><i>Website Powered by Netwerks &copy;</i>
+            </p>
     </body>
 </html>
