--- a/Site/sign_up.html
+++ b/Site/sign_up.html
@@ -50,5 +50,8 @@
          
         <script src="js/bootstrap.min.js">
         </script>
+        <br><br>
+            <p style=" bottom: 0; width:100%; text-align: center; font-size: 12px"><i>Website Powered by Netwerks &copy;</i>
+            </p>
     </body>
 </html>
