--- a/Site/suggestions.html
+++ b/Site/suggestions.html
@@ -33,6 +33,9 @@
                             <a href="suggestions.html">Suggestions</a>
                         </li>
                         <li>
+                            <a href="help.html">Help</a>
+                        </li>
+                        <li>
                             <a href="about_us.html">About Us</a>
                         </li>
                     </ul>
@@ -63,7 +66,7 @@
                                 <div class="form-group">
                                     <span class="col-md-1 col-md-offset-2 text-center fa fa-user bigicon" style="font-style: italic"></span>
                                     <div class="col-md-8">
-                                        <input class="form-control" id="lname" name="name" placeholder="Link to Movie Poster" type="text">
+                                        <input class="form-control" id="lname" name="name" placeholder="Link to Movie Poster Image (JPEG only)" type="text">
                                     </div>
                                 </div>
                                 <div class="form-group">
@@ -125,5 +128,8 @@
          
         <script src="js/bootstrap.min.js">
         </script>
+        <br><br>
+            <p style=" bottom: 0; width:100%; text-align: center; font-size: 12px"><i>Website Powered by Netwerks &copy;</i>
+            </p>
     </body>
 </html>
