--- a/Site/movies.html
+++ b/Site/movies.html
@@ -83,7 +83,7 @@
                     Genre: <span style="font-weight:normal;">Comedy</span><br>
                     Director: <span style="font-weight:normal;">Adam McKay</span><br>
                     Year Released: <span style="font-weight:normal;">2004</span><br>
-                    HD Download Price: <span style="font-weight:normal;">$10.00</span>
+                    Download Price: <span style="font-weight:normal;">$10.00</span>
                 </h5>
                 <p>
                     Ron Burgundy is San Diego's top rated newsman in the male-dominated broadcasting of the '70s, but that's all about to change for Ron and his cronies when an ambitious woman is hired as a new anchor.
@@ -101,7 +101,7 @@
                     Genre: <span style="font-weight:normal;">Comedy</span><br>
                     Director: <span style="font-weight:normal;">Adam McKay</span><br>
                     Year Released: <span style="font-weight:normal;">2004</span><br>
-                    HD Download Price: <span style="font-weight:normal;">$10.00</span>
+                    Download Price: <span style="font-weight:normal;">$10.00</span>
                 </h5>
                 <p>
                     Ron Burgundy is San Diego's top rated newsman in the male-dominated broadcasting of the '70s, but that's all about to change for Ron and his cronies when an ambitious woman is hired as a new anchor.
@@ -119,7 +119,7 @@
                     Genre: <span style="font-weight:normal;">Comedy</span><br>
                     Director: <span style="font-weight:normal;">Adam McKay</span><br>
                     Year Released: <span style="font-weight:normal;">2004</span><br>
-                    HD Download Price: <span style="font-weight:normal;">$10.00</span>
+                    Download Price: <span style="font-weight:normal;">$10.00</span>
                 </h5>
                 <p>
                     Ron Burgundy is San Diego's top rated newsman in the male-dominated broadcasting of the '70s, but that's all about to change for Ron and his cronies when an ambitious woman is hired as a new anchor.
@@ -137,7 +137,7 @@
                     Genre: <span style="font-weight:normal;">Comedy</span><br>
                     Director: <span style="font-weight:normal;">Adam McKay</span><br>
                     Year Released: <span style="font-weight:normal;">2004</span><br>
-                    HD Download Price: <span style="font-weight:normal;">$10.00</span>
+                    Download Price: <span style="font-weight:normal;">$10.00</span>
                 </h5>
                 <p>
                     Ron Burgundy is San Diego's top rated newsman in the male-dominated broadcasting of the '70s, but that's all about to change for Ron and his cronies when an ambitious woman is hired as a new anchor.
@@ -155,7 +155,7 @@
                     Genre: <span style="font-weight:normal;">Comedy</span><br>
                     Director: <span style="font-weight:normal;">Adam McKay</span><br>
                     Year Released: <span style="font-weight:normal;">2004</span><br>
-                    HD Download Price: <span style="font-weight:normal;">$10.00</span>
+                    Download Price: <span style="font-weight:normal;">$10.00</span>
                 </h5>
                 <p>
                     Ron Burgundy is San Diego's top rated newsman in the male-dominated broadcasting of the '70s, but that's all about to change for Ron and his cronies when an ambitious woman is hired as a new anchor.
@@ -173,7 +173,7 @@
                     Genre: <span style="font-weight:normal;">Comedy</span><br>
                     Director: <span style="font-weight:normal;">Adam McKay</span><br>
                     Year Released: <span style="font-weight:normal;">2004</span><br>
-                    HD Download Price: <span style="font-weight:normal;">$10.00</span>
+                    Download Price: <span style="font-weight:normal;">$10.00</span>
                 </h5>
                 <p>
                     Ron Burgundy is San Diego's top rated newsman in the male-dominated broadcasting of the '70s, but that's all about to change for Ron and his cronies when an ambitious woman is hired as a new anchor.
@@ -191,7 +191,7 @@
                     Genre: <span style="font-weight:normal;">Comedy</span><br>
                     Director: <span style="font-weight:normal;">Adam McKay</span><br>
                     Year Released: <span style="font-weight:normal;">2004</span><br>
-                    HD Download Price: <span style="font-weight:normal;">$10.00</span>
+                    Download Price: <span style="font-weight:normal;">$10.00</span>
                 </h5>
                 <p>
                     Ron Burgundy is San Diego's top rated newsman in the male-dominated broadcasting of the '70s, but that's all about to change for Ron and his cronies when an ambitious woman is hired as a new anchor.
@@ -209,7 +209,7 @@
                     Genre: <span style="font-weight:normal;">Comedy</span><br>
                     Director: <span style="font-weight:normal;">Adam McKay</span><br>
                     Year Released: <span style="font-weight:normal;">2004</span><br>
-                    HD Download Price: <span style="font-weight:normal;">$10.00</span>
+                    Download Price: <span style="font-weight:normal;">$10.00</span>
                 </h5>
                 <p>
                     Ron Burgundy is San Diego's top rated newsman in the male-dominated broadcasting of the '70s, but that's all about to change for Ron and his cronies when an ambitious woman is hired as a new anchor.
@@ -227,7 +227,7 @@
                     Genre: <span style="font-weight:normal;">Comedy</span><br>
                     Director: <span style="font-weight:normal;">Adam McKay</span><br>
                     Year Released: <span style="font-weight:normal;">2004</span><br>
-                    HD Download Price: <span style="font-weight:normal;">$10.00</span>
+                    Download Price: <span style="font-weight:normal;">$10.00</span>
                 </h5>
                 <p>
                     Ron Burgundy is San Diego's top rated newsman in the male-dominated broadcasting of the '70s, but that's all about to change for Ron and his cronies when an ambitious woman is hired as a new anchor.
@@ -245,7 +245,7 @@
                     Genre: <span style="font-weight:normal;">Comedy</span><br>
                     Director: <span style="font-weight:normal;">Adam McKay</span><br>
                     Year Released: <span style="font-weight:normal;">2004</span><br>
-                    HD Download Price: <span style="font-weight:normal;">$10.00</span>
+                    Download Price: <span style="font-weight:normal;">$10.00</span>
                 </h5>
                 <p>
                     Ron Burgundy is San Diego's top rated newsman in the male-dominated broadcasting of the '70s, but that's all about to change for Ron and his cronies when an ambitious woman is hired as a new anchor.
